compiler/crates/relay-compiler/tests/relay_compiler_integration/fixtures/shadow_resolver_magic_fragment_server_value_waterfall.invalid.input
//- UserPageStats.js
// A non-Node server VALUE return (`PageStats`) cannot be refetched: it has no
// `id`, so `node(id:)` is meaningless, and it has no separate store record to
// refetch. Annotating the shadow field with @waterfall must therefore be a hard
// error: RelayResolversUnexpectedWaterfall.
/**
 * @relayField User.page_stats: PageStats
 * @rootFragment UserPageStatsResolverFragment
 * @returnFragment UserPageStatsReturnFragment
 */
graphql`fragment UserPageStatsResolverFragment on User {
  page {
    stats {
      ...UserPageStatsReturnFragment
    }
  }
}`

//- UserConsumer.js
graphql`query UserConsumerQuery {
  me {
    page_stats @waterfall {
      likeCount
    }
  }
}`

//- relay.config.json
{
  "language": "flow",
  "jsModuleFormat": "haste",
  "schema": "schema.graphql",
  "featureFlags": {
    "enable_shadow_resolvers": { "kind": "enabled" },
    "relay_resolver_enable_interface_output_type": { "kind": "enabled" },
    "enable_resolver_normalization_ast": true
  }
}

//- schema.graphql
type Query { me: User, node(id: ID!): Node }
interface Node { id: ID! }
type User { name: String, page: Page }
type Page implements Node { id: ID!, title: String, stats: PageStats }
type PageStats { likeCount: Int }
